tests/fail/encap_method_priv.stderr
error[E0437]: Method 'drop' is private to 'String' and cannot be accessed from module 'encap_method_priv'
 --> tests/fail/encap_method_priv.tk:21:6
   |
 21 |     s.drop()
   |      ^
error[E0443]: Cannot modify immutable entity 'Method 'drop' requires explicit mutable argument (use '#')'
 --> tests/fail/encap_method_priv.tk:21:6
   |
 21 |     s.drop()
   |      ^
